Add endpoint to move videos between playlists